fix filtered history not reversing and overflow

--- a/css/index.css
+++ b/css/index.css
@@ -87,8 +87,7 @@ body {
   width: 100vw;
 }
 
-button:hover,
-button:focus {
+button:hover{
   border-color: darkblue;
   box-shadow: inset -50em 0 0 0 rgb(77, 131, 247),
     inset 50em 0 0 0 rgb(77, 131, 247);
@@ -274,7 +273,7 @@ img {
 }
 
 .modal {
-  max-height: fit-content;
+  max-height: 90vh;
   width: 90vw;
   position: relative;
   background-color: rgb(224, 255, 255);
